# MPVRP-CC

./: .gitignore  README.md  README_2.md  index.html  instance_provider.py  instance_verificator.py  main.py  mpvrp_scoring.db  mpvrp_solver.py  mpvrp_verify_v2.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  vrp_professional.html
.github/workflows/: deploy.yml  python-tests.yaml
app/: main.py
app/templates/: base.html  index.html  instances.html  problem.html  specifications.html  visualisation.html
backup/: README.md
backup/app/: main.py  schemas.py
backup/database/: models_db.py
core/generator/: README.md  instance_provider.py  instance_verificator.py
core/model/: mpvrp_score.py  mpvrp_solver.py  mpvrp_verify.py  mpvrp_verify_v2.py
data/solutions/: README.md
docs/: Description_instances.md  Description_solutions.md  mpvrp_cc_modelisation.tex
docs/backup/: Description_MPVRP-CO.md  Description_batch_generator.md  Description_instances.md  Description_solutions.md
docs/latex/: instances_description.tex  problem_definition.tex  solutions_description.tex
pages/: README_VISUALISATION.md  leaderboard.html  leaderboard.html.bak  problem.html  problem.html.txt  scoreboard.html  specification.html  specification.html.txt  submission.html  submission.html.bak  visualisation.html
solutions/: MPVRP_3_s3_d1_p2_solution.json
tests/: README.md  __init__.py  conftest.py  test_api.py  test_feasibility.py  test_instance_generator.py  test_instance_verificator.py  test_integration.py  test_schemas.py  test_utils.py
tests/fixtures/: __init__.py
(+28 files in other folders)
