[project]
name = "mpvrp-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "pulp>=3.3.0",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]
